--- a/Artivity.Api.Http/Artivity.Api.Http.csproj
+++ b/Artivity.Api.Http/Artivity.Api.Http.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Helpers\FileSystemObject.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Parameters\UriParameters.cs" />
+    <Compile Include="Modules\FilesModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
