Included debian package configuration files.

--- a/Artivity.Api.Http/Makefile
+++ b/Artivity.Api.Http/Makefile
@@ -1,27 +1,40 @@
+PACKAGE_NAME = artivity-apid
+PACKAGE_VERSION = 1.5.2
+
+SHARED_LIBS = Artivity.Model.dll dotNetRDF.Data.Virtuoso.dll dotNetRDF.dll OpenLink.Data.Virtuoso.dll Semiodesk.Trinity.dll VDS.Common.dll HtmlAgilityPack.dll Newtonsoft.Json.dll
+
 all:
 
 clean:
-	rm -R dist
-	rm artivity-service-1.0.0.tar.gz
+	rm -Rf dist
+	rm -f $(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz
 
 dist:
 	mkdir dist
 	cp bin/Release/*.exe dist/
+	cp bin/Release/*.config dist/
 	cp bin/Release/*.dll dist/
-	cp artivity.png artivity-service.desktop Makefile COPYING dist/
+	cp artivity.png artivity-apid artivity-apid.desktop Makefile COPYING dist/
+	cd dist && rm $(SHARED_LIBS)
 	chmod 644 dist/*
 	chmod 755 dist/*.exe
-	cd dist && tar cvzf ../artivity-service-1.0.0.tar.gz *
+	cp -R debian dist/
+	cd dist && tar cvzf ../$(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz *
 	rm -R dist
 
 install:
-	mkdir $(DESTDIR)/usr/bin/artivity/
-	install -D -m 644 *.dll $(DESTDIR)/usr/bin/artivity/
-	install -D -m 755 artivity-service.exe $(DESTDIR)/usr/bin/artivity/artivity-service.exe
-	install -D -m 644 artivity-service.desktop $(DESTDIR)/usr/share/applications/artivity-service.desktop
+	mkdir -p $(DESTDIR)/usr/bin/
+	mkdir -p $(DESTDIR)/usr/lib/artivity/
+	install -D -m 644 *.dll $(DESTDIR)/usr/lib/artivity/
+	install -D -m 755 artivity-apid.exe $(DESTDIR)/usr/lib/artivity/artivity-apid.exe
+	install -D -m 644 artivity-apid.exe.config $(DESTDIR)/usr/lib/artivity/artivity-apid.exe.config
+	install -D -m 644 artivity-apid.desktop $(DESTDIR)/usr/share/applications/artivity-apid.desktop
 	install -D -m 644 artivity.png $(DESTDIR)/usr/share/icons/Artivity/32x32/artivity.png
+	install -D -m 755 artivity-apid $(DESTDIR)/usr/bin/
 
 uninstall:
-	rm -Rf $(DESTDIR)/usr/bin/artivity
-	rm $(DESTDIR)/usr/share/applications/artivity-service.desktop
+	rm -f $(DESTDIR)/usr/lib/artivity/artivity-apid.exe
+	rm -f $(DESTDIR)/usr/lib/artivity/artivity-apid.exe.config
+	rm -f $(DESTDIR)/usr/bin/artivity-apid
+	rm $(DESTDIR)/usr/share/applications/artivity-apid.desktop
 	rm $(DESTDIR)/usr/share/icons/Artivity/32x32/artivity.png
