--- a/Artivity.Extension.Chromium/Makefile
+++ b/Artivity.Extension.Chromium/Makefile
@@ -1,7 +1,10 @@
+PACKAGE_NAME = artivity-extension-chromium
+PACKAGE_VERSION = 1.5.0
+
 all:
 
 dist:
-	tar cvzf artivity-extension-chromium-1.0.0.tar.gz package.crx Makefile COPYING
+	tar cvzf $(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz package.crx Makefile COPYING debian
 
 install:
-	install -D -m 644 package.crx $(DESTDIR)/usr/share/chromium-browser/extensions/artivity-1.0.0.crx
+	install -D -m 644 package.crx $(DESTDIR)/usr/share/chromium-browser/extensions/artivity-$(PACKAGE_VERSION).crx
