--- a/Artivity.Extension.Firefox/Makefile
+++ b/Artivity.Extension.Firefox/Makefile
@@ -1,10 +1,14 @@
+PACKAGE_NAME = artivity-extension-firefox
+PACKAGE_VERSION = 1.5.0
+PACKAGE_ID = jid1-1BXmXMTUuyzP8g@jetpack
+
 all:
 
 dist:
-	tar cvzf artivity-extension-firefox-1.0.2.tar.gz package.xpi Makefile COPYING
+	tar cvzf $(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz $(PACKAGE_ID)-$(PACKAGE_VERSION).xpi Makefile COPYING debian
 
 install:
-	install -D -m 644 package.xpi $(DESTDIR)/usr/lib/firefox-addons/extensions/jid1-1BXmXMTUuyzP8g@jetpack.xpi
+	install -D -m 644 $(PACKAGE_ID)-$(PACKAGE_VERSION).xpi $(DESTDIR)/usr/lib/firefox-addons/extensions/$(PACKAGE_ID).xpi
 
 uninstall:
-	rm $(DESTDIR)/usr/lib/firefox-addons/extensions/jid1-1BXmXMTUuyzP8g@jetpack.xpi
+	rm $(DESTDIR)/usr/lib/firefox-addons/extensions/$(PACKAGE_ID).xpi
