--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -36,23 +36,12 @@
     <Compile Include="ObjectModel\Activity.cs" />
     <Compile Include="Ontologies\Ontologies.g.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ObjectModel\Activities\View.cs" />
-    <Compile Include="ObjectModel\Activities\Update.cs" />
-    <Compile Include="ObjectModel\Activities\Undo.cs" />
-    <Compile Include="ObjectModel\Activities\Add.cs" />
-    <Compile Include="Ontologies\Ontologies.i.cs" />
     <Compile Include="ObjectModel\SoftwareAgent.cs" />
     <Compile Include="ObjectModel\Agent.cs" />
     <Compile Include="ObjectModel\Association.cs" />
     <Compile Include="ObjectModel\Entities\XmlAttribute.cs" />
     <Compile Include="ObjectModel\Entities\XmlElement.cs" />
     <Compile Include="ObjectModel\Entities\FileDataObject.cs" />
-    <Compile Include="ObjectModel\Activities\Close.cs" />
-    <Compile Include="ObjectModel\Activities\Open.cs" />
-    <Compile Include="ObjectModel\Activities\Remove.cs" />
-    <Compile Include="ObjectModel\Activities\Delete.cs" />
-    <Compile Include="ObjectModel\Activities\Create.cs" />
-    <Compile Include="ObjectModel\Activities\Redo.cs" />
     <Compile Include="ObjectModel\Role.cs" />
     <Compile Include="ObjectModel\Entities\WebDataObject.cs" />
     <Compile Include="Models.cs" />
@@ -73,13 +62,20 @@
     <Compile Include="ObjectModel\Geometry\Point.cs" />
     <Compile Include="ObjectModel\Geometry\Rectangle.cs" />
     <Compile Include="ObjectModel\Geometry\Viewport.cs" />
+    <Compile Include="Ontologies\Ontologies.i.cs" />
+    <Compile Include="ObjectModel\Activities\Browse.cs" />
+    <Compile Include="ObjectModel\Activities\CreateFile.cs" />
+    <Compile Include="ObjectModel\Activities\EditFile.cs" />
+    <Compile Include="ObjectModel\Influences\Add.cs" />
+    <Compile Include="ObjectModel\Influences\Redo.cs" />
+    <Compile Include="ObjectModel\Influences\Remove.cs" />
+    <Compile Include="ObjectModel\Influences\Undo.cs" />
+    <Compile Include="ObjectModel\Activities\DeleteFile.cs" />
+    <Compile Include="ObjectModel\Influences\Edit.cs" />
+    <Compile Include="ObjectModel\Influences\View.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Ontologies\prov.ttl" />
-    <None Include="packages.config" />
-    <None Include="Ontologies\owl.n3" />
-    <None Include="Ontologies\rdf.rdf" />
-    <None Include="Ontologies\rdfs.n3" />
     <None Include="Ontologies\art.ttl" />
     <None Include="Ontologies\nfo.rdf" />
     <None Include="Ontologies\xml.rdf" />
@@ -87,34 +83,39 @@
     <None Include="Ontologies\foaf.rdf" />
     <None Include="app.config" />
     <None Include="Ontologies\dcelements.ttl" />
+    <None Include="packages.config" />
+    <None Include="Ontologies\owl.n3" />
+    <None Include="Ontologies\rdf.rdf" />
+    <None Include="Ontologies\rdfs.n3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="VDS.Common">
+      <HintPath>..\packages\VDS.Common.1.5.0\lib\net40-client\VDS.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net40\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="Semiodesk.Trinity">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.93\lib\Net40\Semiodesk.Trinity.dll</HintPath>
-    </Reference>
-    <Reference Include="VDS.Common">
-      <HintPath>..\packages\VDS.Common.1.6.0\lib\net40-client\VDS.Common.dll</HintPath>
-    </Reference>
     <Reference Include="dotNetRDF">
-      <HintPath>..\packages\dotNetRDF.1.0.9.3683\lib\net40\dotNetRDF.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.1.0.8.3533\lib\net40\dotNetRDF.dll</HintPath>
     </Reference>
     <Reference Include="dotNetRDF.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.8.3533\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
     </Reference>
     <Reference Include="OpenLink.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.8.3533\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Semiodesk.Trinity">
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.97\lib\Net40\Semiodesk.Trinity.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Semiodesk.Trinity.Modelling.0.9.97\build\net40\Semiodesk.Trinity.Modelling.targets" Condition="Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.97\build\net40\Semiodesk.Trinity.Modelling.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -125,6 +126,6 @@
   <ItemGroup>
     <Folder Include="ObjectModel\Entities\" />
     <Folder Include="ObjectModel\Geometry\" />
+    <Folder Include="ObjectModel\Influences\" />
   </ItemGroup>
-  <Import Project="../packages/Semiodesk.Trinity.Modelling.0.9.93/build/net40/Semiodesk.Trinity.Modelling.targets" Condition="Exists('../packages/Semiodesk.Trinity.Modelling.0.9.93/build/net40/Semiodesk.Trinity.Modelling.targets')" />
 </Project>
