--- a/Artivity.Extension.Chromium/manifest.json
+++ b/Artivity.Extension.Chromium/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Artivity",
   "description": "This extension captures the webpages you visit in the Zeigeist log.",
-  "version": "1.0.0",
+  "version": "1.5.0",
 
   "icons": { "16": "icon16.png",
            "48": "icon48.png",
@@ -18,13 +18,7 @@
       "scripts": ["background.js"]
   },
 
-  "content_scripts": [{
-      "matches" : ["*://*/*"],
-      "js": ["content.js"],
-      "run_at" : "document_end"
-  }],
-
   "permissions": [
-    "activeTab", "http://localhost/", "http://localhost:8272/"
+    "tabs", "activeTab", "http://localhost/", "http://localhost:8272/"
   ]
 }
