--- a/artivity-explorer/Artivity.Explorer.csproj
+++ b/artivity-explorer/Artivity.Explorer.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Controls\FileSelectionEventHandler.cs" />
     <Compile Include="Controls\JournalView.cs" />
     <Compile Include="Controls\FileStatsPanel.cs" />
+    <Compile Include="Controls\FileListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -80,12 +81,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Xwt.Gtk">
-      <HintPath>References\Xwt.Gtk.dll</HintPath>
-    </Reference>
-    <Reference Include="Xwt.Gtk.Windows">
-      <HintPath>References\Xwt.Gtk.Windows.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Drawing" />
@@ -118,7 +113,10 @@
       <HintPath>..\packages\OxyPlot.Xwt.1.0.0-unstable1870\lib\net40\OxyPlot.Xwt.dll</HintPath>
     </Reference>
     <Reference Include="Xwt">
-      <HintPath>..\packages\OxyPlot.Xwt.1.0.0-unstable1870\lib\net40\Xwt.dll</HintPath>
+      <HintPath>References\Xwt.dll</HintPath>
+    </Reference>
+    <Reference Include="Xwt.Gtk">
+      <HintPath>References\Xwt.Gtk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
