Ported user interface to Eto.Forms.

--- a/artivity-datamodel/app.config
+++ b/artivity-datamodel/app.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <!-- NOTE: Throws InvalidCast-exception on Mono
   <configSections>
     <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity"/>
   </configSections>
+  -->
   <connectionStrings>
     <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset"/>
   </connectionStrings>
