--- a/artivity-datamodel/Artivity.DataModel.csproj
+++ b/artivity-datamodel/Artivity.DataModel.csproj
@@ -9,10 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Artivity.Model</RootNamespace>
     <AssemblyName>Artivity.Model</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>932c28d3</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,9 +64,6 @@
     <Compile Include="ObjectModel\Geometry\Point.cs" />
     <Compile Include="ObjectModel\Geometry\Rectangle.cs" />
     <Compile Include="ObjectModel\Geometry\Viewport.cs" />
-    <Compile Include="Ontologies\Ontologies.i.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
     <Compile Include="ObjectModel\Activities\Browse.cs" />
     <Compile Include="ObjectModel\Activities\CreateFile.cs" />
     <Compile Include="ObjectModel\Activities\EditFile.cs" />
@@ -77,6 +74,7 @@
     <Compile Include="ObjectModel\Activities\DeleteFile.cs" />
     <Compile Include="ObjectModel\Influences\Edit.cs" />
     <Compile Include="ObjectModel\Influences\View.cs" />
+    <Compile Include="Ontologies\Ontologies.i.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Ontologies\prov.ttl">
@@ -102,44 +100,42 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="Ontologies\owl.n3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Ontologies\rdf.rdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Ontologies\rdfs.n3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="Ontologies\owl.n3" />
+    <None Include="Ontologies\rdf.rdf" />
+    <None Include="Ontologies\rdfs.n3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="VDS.Common">
-      <HintPath>..\packages\VDS.Common.1.5.0\lib\net40-client\VDS.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="HtmlAgilityPack">
-      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net40\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="VDS.Common">
+      <HintPath>..\packages\VDS.Common.1.6.0\lib\net40-client\VDS.Common.dll</HintPath>
     </Reference>
     <Reference Include="dotNetRDF">
-      <HintPath>..\packages\dotNetRDF.1.0.8.3533\lib\net40\dotNetRDF.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.1.0.9.3683\lib\net40\dotNetRDF.dll</HintPath>
+    </Reference>
+    <Reference Include="virtado4">
+      <HintPath>..\packages\OpenLink.Data.Virtuoso.7.20.3214.1\lib\net40\virtado4.dll</HintPath>
     </Reference>
     <Reference Include="dotNetRDF.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.8.3533\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
     </Reference>
     <Reference Include="OpenLink.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.8.3533\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
     </Reference>
     <Reference Include="Semiodesk.Trinity">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.97\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.104\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Semiodesk.Trinity.Modelling.0.9.97\build\net40\Semiodesk.Trinity.Modelling.targets" Condition="Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.97\build\net40\Semiodesk.Trinity.Modelling.targets')" />
+  <Import Project="..\packages\Semiodesk.Trinity.Modelling.0.9.104\build\net40\Semiodesk.Trinity.Modelling.targets" Condition="Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.104\build\net40\Semiodesk.Trinity.Modelling.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
