--- a/artivity-explorer/packages.config
+++ b/artivity-explorer/packages.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="dotNetRDF" version="1.0.8.3533" targetFramework="net40" />
-  <package id="dotNetRDF.Data.Virtuoso" version="1.0.8.3533" targetFramework="net40" />
-  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
-  <package id="OpenLink.Data.Virtuoso" version="6.2.3128.1" targetFramework="net40" />
-  <package id="OxyPlot.Core" version="1.0.0-unstable1870" targetFramework="net40" />
-  <package id="OxyPlot.Xwt" version="1.0.0-unstable1870" targetFramework="net40" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.97" targetFramework="net40" />
-  <package id="VDS.Common" version="1.5.0" targetFramework="net40" />
+  <package id="dotNetRDF" version="1.0.9.3683" targetFramework="net45" />
+  <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net45" />
+  <package id="Eto.Forms" version="2.1.0" targetFramework="net45" />
+  <package id="Eto.OxyPlot" version="1.0.5377.38510" targetFramework="net45" />
+  <package id="Eto.OxyPlot.Wpf" version="1.0.5377.38510" targetFramework="net45" />
+  <package id="Eto.Platform.Gtk3" version="2.1.0" targetFramework="net45" />
+  <package id="Eto.Platform.Mac" version="2.1.0" targetFramework="net45" />
+  <package id="Eto.Platform.Wpf" version="2.1.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="OpenLink.Data.Virtuoso" version="7.20.3214.1" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="2014.1.474" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.104" targetFramework="net45" />
+  <package id="VDS.Common" version="1.6.0" targetFramework="net45" />
 </packages>
