--- a/artivity-explorer/Artivity.Explorer.csproj
+++ b/artivity-explorer/Artivity.Explorer.csproj
@@ -9,7 +9,6 @@
     <AssemblyName>artivity-explorer</AssemblyName>
     <TargetFrameworkProfile />
     <StartupObject>ArtivityExplorer.Program</StartupObject>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,42 +30,81 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup />
   <ItemGroup>
-    <Compile Include="Controls\ActivitiesChart.cs" />
-    <Compile Include="Controls\ActivitiesLog.cs" />
-    <Compile Include="Controls\MainWindow.cs" />
-    <Compile Include="Controls\Widgets\ColourBox.cs" />
-    <Compile Include="Controls\Widgets\ColourWidget.cs" />
-    <Compile Include="Controls\Widgets\CompositionWidget.cs" />
+    <Content Include="Resources\Icon.ico" />
+    <EmbeddedResource Include="Resources\Preferences.png">
+      <LogicalName>preferences</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Controls\ActivitiesChart.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\ActivitiesLog.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\MainWindow.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\UserHeader.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\Widgets\ColourBox.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\Widgets\ColourWidget.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\Widgets\CompositionWidget.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\Wizard.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Parsers\SvgStats.cs" />
     <Compile Include="Parsers\SvgStatsParser.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
-    <Compile Include="Dialogs\SettingsDialog.cs" />
-    <Compile Include="Dialogs\ExportDialog.cs" />
-    <Compile Include="Controls\DialogPage.cs" />
+    <Compile Include="Dialogs\SettingsDialog\SettingsDialog.ContentPage.cs" />
+    <Compile Include="Dialogs\SettingsDialog\SettingsDialog.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ExportDialog\ExportDialog.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\WizardPage.cs" />
     <Compile Include="Setup\Setup.cs" />
-    <Compile Include="Controls\DialogButtons.cs" />
-    <Compile Include="Controls\DialogNavigationButtons.cs" />
-    <Compile Include="Controls\UserSettingsControl.cs" />
-    <Compile Include="Controls\AgentSettingsControl.cs" />
+    <Compile Include="Controls\UserSettingsControl.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\AgentSettingsControl.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
     <Compile Include="Controls\FileSelectionEventArgs.cs" />
     <Compile Include="Extensions\ListViewExtensions.cs" />
-    <Compile Include="Controls\FileView.cs" />
+    <Compile Include="Controls\FileView.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
     <Compile Include="Controls\FileSelectionEventHandler.cs" />
-    <Compile Include="Controls\JournalView.cs" />
-    <Compile Include="Controls\FileStatsPanel.cs" />
+    <Compile Include="Controls\JournalView.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Controls\FileStatsPanel.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
     <Compile Include="Controls\ToolItems\HomeToolItem.cs" />
     <Compile Include="Controls\ToolItems\SettingsToolItem.cs" />
     <Compile Include="Controls\ToolItems\ExportToolItem.cs" />
-    <Compile Include="Controls\JournalFileList.cs" />
-    <Compile Include="Controls\JournalFileListItem.cs" />
+    <Compile Include="Controls\JournalItem.cs" />
     <Compile Include="Controls\Cells\ColourPickerCell.cs" />
-    <Compile Include="Controls\ColourPickerDialog.cs" />
-    <Compile Include="Dialogs\SetupDialog.cs" />
-    <Compile Include="Dialogs\Pages\SetupReadyPage.cs" />
-    <Compile Include="Dialogs\Pages\SetupWelcomePage.cs" />
+    <Compile Include="Controls\ColourPickerDialog.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Dialogs\SetupWizard\SetupWizard.cs">
+      <SubType>Eto.Forms</SubType>
+    </Compile>
+    <Compile Include="Dialogs\SetupWizard\SetupWizard.WelcomePage.cs" />
+    <Compile Include="Dialogs\SetupWizard\SetupWizard.CompletePage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -85,63 +123,74 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Eto.OxyPlot">
+      <HintPath>References\Eto.OxyPlot.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto.OxyPlot.Gtk3">
+      <HintPath>References\Eto.OxyPlot.Gtk3.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto.OxyPlot.Wpf">
+      <HintPath>References\Eto.OxyPlot.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot, Version=2015.1.1046.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\OxyPlot.Core.2015.1.1046-alpha\lib\net40\OxyPlot.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot.GtkSharp3">
+      <HintPath>..\packages\OxyPlot.GtkSharp3.2015.1.1046-alpha\lib\net40\OxyPlot.GtkSharp3.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot.Wpf">
+      <HintPath>..\packages\OxyPlot.Wpf.2013.1.11.1\lib\NET40\OxyPlot.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot.Xps">
+      <HintPath>..\packages\OxyPlot.Wpf.2013.1.11.1\lib\NET40\OxyPlot.Xps.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="Eto">
-      <HintPath>..\packages\Eto.Forms.2.1.0\lib\net45\Eto.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.Gtk3">
-      <HintPath>..\packages\Eto.Platform.Gtk3.2.1.0\lib\net45\Eto.Gtk3.dll</HintPath>
-    </Reference>
-    <Reference Include="MonoMac">
-      <HintPath>..\packages\Eto.Platform.Mac.2.1.0\lib\net45\MonoMac.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.Mac">
-      <HintPath>..\packages\Eto.Platform.Mac.2.1.0\lib\net45\Eto.Mac.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.Wpf">
-      <HintPath>..\packages\Eto.Platform.Wpf.2.1.0\lib\net45\Eto.Wpf.dll</HintPath>
-    </Reference>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="OxyPlot">
-      <HintPath>..\packages\OxyPlot.Core.2014.1.474\lib\portable-net4+sl4+wp71+win8\OxyPlot.dll</HintPath>
-    </Reference>
     <Reference Include="VDS.Common">
-      <HintPath>..\packages\VDS.Common.1.6.0\lib\net40-client\VDS.Common.dll</HintPath>
+      <HintPath>..\packages\VDS.Common.1.5.0\lib\net40-client\VDS.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Semiodesk.Trinity">
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.97\lib\Net40\Semiodesk.Trinity.dll</HintPath>
     </Reference>
     <Reference Include="dotNetRDF">
-      <HintPath>..\packages\dotNetRDF.1.0.9.3683\lib\net40\dotNetRDF.dll</HintPath>
+      <HintPath>..\packages\dotNetRDF.1.0.8.3533\lib\net40\dotNetRDF.dll</HintPath>
+    </Reference>
+    <Reference Include="dotNetRDF.Data.Virtuoso">
+      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.8.3533\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto">
+      <HintPath>..\packages\Eto.Forms.2.1.0\lib\net40\Eto.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto.Gtk3">
+      <HintPath>..\packages\Eto.Platform.Gtk3.2.1.0\lib\net40\Eto.Gtk3.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto.Mac">
+      <HintPath>..\packages\Eto.Platform.Mac.2.1.0\lib\net40\Eto.Mac.dll</HintPath>
+    </Reference>
+    <Reference Include="MonoMac">
+      <HintPath>..\packages\Eto.Platform.Mac.2.1.0\lib\net40\MonoMac.dll</HintPath>
+    </Reference>
+    <Reference Include="Eto.Wpf">
+      <HintPath>..\packages\Eto.Platform.Wpf.2.1.0\lib\net40\Eto.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net40\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="virtado4">
       <HintPath>..\packages\OpenLink.Data.Virtuoso.7.20.3214.1\lib\net40\virtado4.dll</HintPath>
     </Reference>
-    <Reference Include="dotNetRDF.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenLink.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
-    </Reference>
-    <Reference Include="Semiodesk.Trinity">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.104\lib\Net40\Semiodesk.Trinity.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.OxyPlot">
-      <HintPath>..\packages\Eto.OxyPlot.1.0.5377.38510\lib\net45\Eto.OxyPlot.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.OxyPlot.Wpf">
-      <HintPath>..\packages\Eto.OxyPlot.Wpf.1.0.5377.38510\lib\net45\Eto.OxyPlot.Wpf.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\Widgets\EditingWidget.cs">
       <LogicalName>colour</LogicalName>
+      <SubType>Eto.Forms</SubType>
     </Compile>
     <EmbeddedResource Include="Resources\Composition.png">
       <LogicalName>composition</LogicalName>
@@ -150,16 +199,13 @@
       <LogicalName>edit</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Icon.png">
-      <LogicalName>icon</LogicalName>
+      <LogicalName>icon.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Icon.ico">
+      <LogicalName>icon.ico</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dialogs\" />
-    <Folder Include="Setup\" />
-    <Folder Include="Controls\ToolItems\" />
-    <Folder Include="Controls\Cells\" />
-    <Folder Include="Dialogs\Pages\" />
-  </ItemGroup>
+  <ItemGroup />
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
