--- a/artivity-explorer/app.config
+++ b/artivity-explorer/app.config
@@ -1,16 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity"/>
+    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
   </configSections>
   <connectionStrings>
-    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset"/>
+    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2013.1.11.1" newVersion="2013.1.11.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2015.1.1046.0" newVersion="2015.1.1046.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -18,24 +26,24 @@
     <OntologySettings>
       <!--http://www.w3.org/1999/02/22-rdf-syntax-ns#-->
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
-        <FileSource Location="Ontologies/rdf.rdf"/>
+        <FileSource Location="Ontologies/rdf.rdf" />
       </Ontology>
       <!--http://www.w3.org/2000/01/rdf-schema#-->
       <Ontology Uri="http://www.w3.org/2000/01/rdf-schema#" Prefix="rdfs">
-        <FileSource Location="Ontologies/rdfs.n3"/>
+        <FileSource Location="Ontologies/rdfs.n3" />
       </Ontology>
       <!--http://www.w3.org/2002/07/owl#-->
       <Ontology Uri="http://www.w3.org/2002/07/owl#" Prefix="owl">
-        <FileSource Location="Ontologies/owl.n3"/>
+        <FileSource Location="Ontologies/owl.n3" />
       </Ontology>
     </OntologySettings>
     <VirtuosoStoreSettings>
       <RuleSets>
         <RuleSet Uri="urn:semiodesk/ruleset">
           <Graphs>
-            <Graph Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#"/>
-            <Graph Uri="http://www.w3.org/2000/01/rdf-schema#"/>
-            <Graph Uri="http://www.w3.org/2002/07/owl#"/>
+            <Graph Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" />
+            <Graph Uri="http://www.w3.org/2000/01/rdf-schema#" />
+            <Graph Uri="http://www.w3.org/2002/07/owl#" />
           </Graphs>
         </RuleSet>
       </RuleSets>
