--- a/artivity-explorer/packages.config
+++ b/artivity-explorer/packages.config
@@ -3,7 +3,7 @@
   <package id="dotNetRDF" version="1.0.9.3683" targetFramework="net40" />
   <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net40" />
   <package id="Eto.Forms" version="2.1.0" targetFramework="net40" />
-  <package id="Eto.Platform.Gtk3" version="2.1.0" targetFramework="net40" />
+  <package id="Eto.Platform.Gtk" version="2.1.0" targetFramework="net40" />
   <package id="Eto.Platform.Wpf" version="2.1.0" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
